# MPrism

./: .editorconfig  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/application/: chat.rs  error.rs  generation.rs  mod.rs  provider.rs  session.rs  types.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/state/: adapter_registry.rs  app_state.rs  mod.rs
apps/desktop/src-tauri/src/storage/: atomic.rs  attachments.rs  device.rs  error.rs  logs.rs  messages.rs  mod.rs  paths.rs  sessions.rs  settings.rs  store.rs  types.rs
apps/desktop/src-tauri/tests/: phase4_application.rs  storage_file_store.rs
apps/desktop/src/app/: App.tsx  store.chat.test.ts  (+3 more)
crates/mprism-protocol/: Cargo.toml
crates/mprism-protocol/src/: adapter.rs  auth.rs  error.rs  finish.rs  lib.rs  secret.rs  sse.rs  types.rs  usage.rs
crates/mprism-protocol/src/adapters/: mod.rs
crates/mprism-protocol/src/adapters/anthropic/: client.rs  mod.rs  sse_events.rs
crates/mprism-protocol/src/adapters/gemini/: client.rs  mod.rs  stream_decode.rs
crates/mprism-protocol/src/adapters/openai/: chunk.rs  client.rs  mod.rs
crates/mprism-protocol/src/adapters/openai_responses/: client.rs  events.rs  mod.rs
crates/mprism-protocol/tests/: anthropic_messages_integration.rs  capability_matrix_v2.rs  gemini_generate_content_integration.rs  openai_compatible_integration.rs  openai_responses_integration.rs
scripts/: audit-production.ps1
(+29 files in other folders)
