[package]
name = "mprism-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible model protocol SDK for MPrism"
publish = false

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "time"] }
url = "2"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
