[package]
name = "mprism"
version.workspace = true
description = "MPrism desktop application"
authors = ["MPrism"]
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "mprism_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
dirs = "6"
futures-util = "0.3"
mprism-protocol = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3"
